feat:Acrescentando novas features